Salesforce CPQ/main/default/objects/SubscribedQuoteLine__c/SubscribedQuoteLine__c.object-meta.xml
<CustomObject>
    <customHelpPage>SubscribedAssetHelp</customHelpPage>
    <description>Links a particular asset to the subscription that covers it.</description>
    <label>Subscribed Quote Line</label>
    <nameField>
        <displayFormat>SQL-{00000000}</displayFormat>
        <label>Subscribed Quote Line#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscribed Quote Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>