Salesforce CPQ/main/default/objects/SubscribedQuoteLine__c/fields/AssetQuoteLineQuantity__c.field-meta.xml
<CustomField>
    <fullName>AssetQuoteLineQuantity__c</fullName>
    <description>Quantity quoted on the Asset Quote Line.</description>
    <inlineHelpText>Quantity quoted on the Asset Quote Line.</inlineHelpText>
    <label>Asset Quote Line Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>