Salesforce CPQ/main/default/objects/SubscribedQuoteLine__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the quote for the quoteLines.</description>
    <inlineHelpText>Identifies the quote for the quoteLines.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>