Salesforce CPQ/main/default/objects/SubscribedQuoteLine__c/fields/SubscriptionBasePrice__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionBasePrice__c</fullName>
    <description>Unit price used in Percent of Total calculation.</description>
    <inlineHelpText>Unit price used in Percent of Total calculation.</inlineHelpText>
    <label>Subscription Base Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>