Salesforce CPQ/main/default/objects/SubscribedQuoteLine__c/fields/SubscriptionNetTotal__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionNetTotal__c</fullName>
    <description>Net total of the Subscription Quote Line.</description>
    <inlineHelpText>Net total of the Subscription Quote Line.</inlineHelpText>
    <label>Subscription Net Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>